functions-add-and-delete-row

--- a/plan/htmls/create-plan.html
+++ b/plan/htmls/create-plan.html
@@ -30,7 +30,9 @@
       <div class="js-save"></div>
 
       <div class="js-input-row"></div>
+
       <div class="js-add-row"></div>
+      <div class="js-delete-row"></div>
     </div>
     
     
