create-and-send-plan-from-form

--- a/plan/htmls/create-plan.html
+++ b/plan/htmls/create-plan.html
@@ -22,12 +22,17 @@
       </button>
     </div>
 
+    <div class="js-form-container">
+      
+    </div>
+
     <div class="container stopDisplaying">
       <div class="schedule js-schedule-week"></div>
       
       <div class="js-rows"></div>
 
       <div class="js-save"></div>
+
 
       <div class="js-input-row"></div>
 
