--- a/plan/htmls/my-plans.html
+++ b/plan/htmls/my-plans.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
-
+    <script type="module" src="../scripts/my-plans.js"></script>
+    <script type="module" src="../scripts/data.js"></script>
   </body>
 </html>
