--- a/plan/htmls/my-plans.html
+++ b/plan/htmls/my-plans.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <title>My plans</title>
+    <link rel="stylesheet" href="../styles/existing-plan/my-plans.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
+    <h1>Your plans</h1>
+
+    <div class="js-plans-container"></div>
+
     <script type="module" src="../scripts/my-plans.js"></script>
     <script type="module" src="../scripts/data.js"></script>
   </body>
