make-introducting-page

--- a/plan/htmls/workout.html
+++ b/plan/htmls/workout.html
@@ -6,31 +6,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+Elbasan&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <div class="background-header">
-      <div class="background-picture-container">   
-        <img class="background-picture" src="../images/header.avif">
-      </div>
+    <section class="introduction">
+      <div class="header-introduction-container">
+        <div class="content-introduction">
+          <h1 class="header-introduction">
+            Plan your future now.
+          </h1>
 
-      <div class="plan-options-container">
-        <a href="my-plans.html" target="_blank">
-          <div>
-            <button class="existing-plans">
-              My plans
-            </button>          
-          </div>
-        </a>
+          <p class="caption">
+            Have you ever thought how to start? You are in the right place. Make yourself comfortable.
+          </p>
   
-        <a href="create-plan.html" target="_blank">
-          <div>
-            <button class="new-plans">
-              Create a new plan
+          <a href="#create-future">
+            <button class="forward-button">
+              Looking forward
             </button>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
-    </div>
+        
+      <div class="background-picture-container">   
+        <img class="background-picture" src="../images/header.jpeg">
+      </div>
+    </section>
+
+    <section id="create-future">
+      <h1 class="header-benefits">
+        Benefits
+      </h1>
+    </section>
   </body>
 </html>
