create-first-element-in-section-2

--- a/plan/htmls/workout.html
+++ b/plan/htmls/workout.html
@@ -21,7 +21,7 @@
           </h1>
 
           <p class="caption">
-            Have you ever thought how to start? You are in the right place. Make yourself comfortable.
+            Have you ever wondered how to start? You are in the right place. Make yourself comfortable.
           </p>
   
           <a href="#create-future">
@@ -39,8 +39,20 @@
 
     <section id="create-future">
       <h1 class="header-benefits">
-        Benefits
+        Meet the Benefits
       </h1>
+
+      <div class="benefits-container">
+        <div class="row-1-container">
+          <div class="box hidden"></div>
+          <img class="barbell-image" alt="barbell rowing" src="../images/barbell-row.jpg">
+          <p class="barbell-caption">
+            Plan by yourself.
+          </p>
+        </div>
+      </div>
     </section>
+
+    <script type="module" src="../scripts/workout.js"></script>
   </body>
 </html>
