make-second-section-complete

--- a/plan/htmls/workout.html
+++ b/plan/htmls/workout.html
@@ -43,14 +43,50 @@
       </h1>
 
       <div class="benefits-container">
-        <div class="row-1-container">
+        <div class="row row-1-container">
           <div class="box hidden"></div>
-          <img class="barbell-image" alt="barbell rowing" src="../images/barbell-row.jpg">
-          <p class="barbell-caption">
+          <p class="barbell-caption barbell-1">
             Plan by yourself.
           </p>
+          <img class="barbell-image barbell-img-1" alt="barbell rowing" src="../images/barbell-caption-1.jpg">
+        </div>
+
+        <div class="row row-2-container">
+          <div class="box box-2 hidden" ></div>
+          <p class="barbell-caption barbell-2">
+            Build your discipline.
+          </p>
+          <img class="barbell-image barbell-img-2" alt="barbell rowing" src="../images/barbell-caption-2.jpg">
+        </div>
+
+        <div class="row row-3-container">
+          <div class="box box-3 hidden"></div>
+          <p class="barbell-caption barbell-3">
+            Boost your productivity.
+          </p>
+          <img class="barbell-image barbell-img-3" alt="barbell rowing" src="../images/barbell-caption-3.jpg">
         </div>
       </div>
+    </section>
+
+    <section>
+      <div class="plan-options-container">
+        <a href="my-plans.html" target="_blank">
+          <div>
+            <button class="existing-plans">
+              My plans
+            </button>          
+          </div>
+        </a>
+
+        <a href="create-plan.html" target="_blank">
+          <div>
+            <button class="new-plans">
+              Create a new plan
+            </button>
+          </div>
+        </a>
+      </div> 
     </section>
 
     <script type="module" src="../scripts/workout.js"></script>
