--- a/plan/htmls/workout.html
+++ b/plan/htmls/workout.html
@@ -71,8 +71,10 @@
 
     <section>
       <div class="plan-options-container">
+        <p class="options-header">Make the future.</p>
         <a href="my-plans.html" target="_blank">
-          <div>
+          <div class="existing-plans-container">
+            <img class="my-plans-img" alt="New plan" src="../images/my-plans-img.jpg">
             <button class="existing-plans">
               My plans
             </button>          
@@ -80,7 +82,8 @@
         </a>
 
         <a href="create-plan.html" target="_blank">
-          <div>
+          <div class="create-plan-container">
+            <img class="create-plan-img" alt="New plan" src="../images/create-plan-img.jpg">
             <button class="new-plans">
               Create a new plan
             </button>
