footer-main-page

--- a/plan/htmls/workout.html
+++ b/plan/htmls/workout.html
@@ -92,6 +92,43 @@
       </div> 
     </section>
 
+    <footer class="page-end">
+      <div class="socials">
+        <p class="socials-header">
+          Join us on:
+        </p>
+
+        <a href="https://www.instagram.com/" target="_blank">
+          <img class="instagram-icon icon" alt="instagram" src="../images/instagram-icon.png">
+        </a>
+        <a href="https://www.facebook.com/" target="_blank">
+          <img class="facebook-icon icon" alt="facebook" src="../images/facebook-icon.png">
+        </a>
+      </div>
+
+      <div class="info">
+        <p class="info-header">
+          Informations and contact
+        </p>
+
+        <p class="info-author">
+          © 2025 Maciej Węglarz
+        </p>
+
+        <div class="author-links-container">
+          <a class="linkedin-link" href="https://linkedin.com/in/maciej-węglarz-bb2634365" target="_blank">
+            <img class="author-icon-linkedIn" alt="linkedIn" src="../images/linkedin--icon.png">
+          </a>
+  
+          <a class="github-link" href="https://github.com/MacDev-maker">
+            <img class="author-icon-github" alt="Github" src="../images/github-icon.png">
+          </a>
+        </div>
+
+        <p class="contact">contact: maciejwegdev@gmail.com</p>
+      </div>
+    </footer>
+
     <script type="module" src="../scripts/workout.js"></script>
   </body>
 </html>
