style-form-submit

--- a/plan/htmls/create-plan.html
+++ b/plan/htmls/create-plan.html
@@ -10,23 +10,11 @@
   </head>
 
   <body>
-    <div class="boxing-plan js-button-plan">
-      <button class="boxing-button choice-button js-box-button">
-        BOX
-      </button>
-    </div>
-
-    <div class="gym-plan js-button-plan">
-      <button class="gym-button choice-button js-gym-button">
-        GYM
-      </button>
-    </div>
-
     <div class="js-form-container">
       
     </div>
 
-    <div class="container stopDisplaying">
+    <div class="container">
       <div class="schedule js-schedule-week"></div>
       
       <div class="js-rows"></div>
