--- a/plan/htmls/create-plan.html
+++ b/plan/htmls/create-plan.html
@@ -23,8 +23,10 @@
 
       <div class="js-input-row"></div>
 
-      <div class="js-delete-row"></div>
-      <div class="js-add-row"></div>
+      <div class="add-delete-container">
+        <div class="js-delete-row"></div>
+        <div class="js-add-row"></div>
+      </div>
     </div>
     
     
