--- a/plan/htmls/create-plan.html
+++ b/plan/htmls/create-plan.html
@@ -29,6 +29,42 @@
       </div>
     </div>
     
+    <footer class="page-end">
+      <div class="socials">
+        <p class="socials-header">
+          Join us on:
+        </p>
+
+        <a href="https://www.instagram.com/" target="_blank">
+          <img class="instagram-icon icon" alt="instagram" src="../images/instagram-icon.png">
+        </a>
+        <a href="https://www.facebook.com/" target="_blank">
+          <img class="facebook-icon icon" alt="facebook" src="../images/facebook-icon.png">
+        </a>
+      </div>
+
+      <div class="info">
+        <p class="info-header">
+          Informations and contact
+        </p>
+
+        <p class="info-author">
+          © 2025 Maciej Węglarz
+        </p>
+
+        <div class="author-links-container">
+          <a class="linkedin-link" href="https://linkedin.com/in/maciej-węglarz-bb2634365" target="_blank">
+            <img class="author-icon-linkedIn" alt="linkedIn" src="../images/linkedin-icon-color.png">
+          </a>
+  
+          <a class="github-link" href="https://github.com/MacDev-maker">
+            <img class="author-icon-github" alt="Github" src="../images/github-color.png">
+          </a>
+        </div>
+
+        <p class="contact">contact: maciejwegdev@gmail.com</p>
+      </div>
+    </footer>
     
     <script type="module" src="../scripts/create-plan.js"></script>
     <script type="module" src="../scripts/data.js"></script>
