put-indexhtml-on-root

--- a/plan/index.html
+++ b/plan/index.html
@@ -72,7 +72,7 @@
     <section>
       <div class="plan-options-container">
         <p class="options-header">Make the future.</p>
-        <a href="my-plans.html" target="_blank">
+        <a href="htmls/my-plans.html" target="_blank">
           <div class="existing-plans-container">
             <img class="my-plans-img" alt="New plan" src="../images/my-plans-img.jpg">
             <button class="existing-plans">
@@ -81,7 +81,7 @@
           </div>
         </a>
 
-        <a href="create-plan.html" target="_blank">
+        <a href="htmls/create-plan.html" target="_blank">
           <div class="create-plan-container">
             <img class="create-plan-img" alt="New plan" src="../images/create-plan-img.jpg">
             <button class="new-plans">
