open-styles-folder

--- a/htmls/my-plans.html
+++ b/htmls/my-plans.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My plans</title>
-    <link rel="stylesheet" href="../styles/existing-plan/my-plans.css">
+    <link rel="stylesheet" href="../styles/my-plans.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
